--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -2,10 +2,10 @@
 @import '../../node_modules/vuetify/src/stylus/settings/_colors'
 
 $theme := {
-  primary: $indigo.darken-2
+  primary: $teal.darken-1
   accent: $red.accent-2
   secondary: $grey.lighten-1
-  info: $blue.lighten-1
+  info: $grey.darken-4
   warning: $amber.darken-2
   error: $red.accent-4
   success: $green.lighten-2
